[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pygenogrove"
version = "0.2.0"
description = "Python bindings for the genogrove C++ library - a specialized B+ tree for genomic intervals"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Richard A. Schaefer", email = "richard.schaefer@northwestern.edu" },
    { name = "Rendong Yang", email = "rendong.yang@northwestern.edu" },
    { name = "Yangyang Li", email = "yangyang.li@northwestern.edu" },
]
keywords = ["genomics", "bioinformatics", "intervals", "b+tree", "data-structures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]

[project.urls]
Homepage = "https://github.com/genogrove/pygenogrove"
Documentation = "https://genogrove.readthedocs.com"
Repository = "https://github.com/genogrove/pygenogrove"
Issues = "https://github.com/genogrove/pygenogrove/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "pybind11-stubgen>=0.16.0",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

# The genogrove submodule is part of the build (add_subdirectory), so its
# sources must ship in the sdist for a `pip install` from source to compile.
sdist.include = ["external/genogrove/**"]

[tool.cibuildwheel]
# Match the CI test matrix; no PyPy, no musllinux (htslib isn't provisioned there).
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*musllinux*"
build-verbosity = 1
# Smoke-test every built wheel: it imports and reports both versions.
test-command = "python -c \"import pygenogrove; print(pygenogrove.__version__, pygenogrove.__genogrove_version__)\""

[tool.cibuildwheel.linux]
# manylinux_2_28 (AlmaLinux 8) ships gcc 12 — needed for the C++20 build.
manylinux-x86_64-image = "manylinux_2_28"
# Build htslib from source into /usr/local so genogrove can link it; auditwheel
# then bundles libhts into the repaired wheel.
before-all = "bash {project}/.github/scripts/install-htslib-linux.sh"
environment = { PKG_CONFIG_PATH = "/usr/local/lib/pkgconfig", LD_LIBRARY_PATH = "/usr/local/lib" }

[tool.cibuildwheel.macos]
# Homebrew htslib; delocate bundles it into the wheel.
before-all = "brew install htslib"
# arm64-only macOS wheels (built on the macos-14 runner; no Intel macOS — see
# release.yml). Target 14.0: the runner's Homebrew bottles (libhts, liblzma,
# libdeflate) target macOS 14.0, so delocate won't bundle them into a lower
# target. (genogrove also needs >= 13.3 regardless, for std::format /
# std::to_chars in libc++.)
environment = { PKG_CONFIG_PATH = "$(brew --prefix)/lib/pkgconfig", MACOSX_DEPLOYMENT_TARGET = "14.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
